Started Implementation of PoC for new Caching
* Implemented simple Cache with Get, CleanUp and Load Logic
* Implemented non-generic Cache to be held within a List
* Started Implementation of CacheService
* Started Implementation of Dependency-Tree

--- a/OctoAwesome/OctoAwesome.PoC.Tests/OctoAwesome.PoC.Tests.csproj
+++ b/OctoAwesome/OctoAwesome.PoC.Tests/OctoAwesome.PoC.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<ProjectReference Include="..\OctoAwesome.Poc\OctoAwesome.Poc.csproj" />
+    <ProjectReference Include="..\PoC\OctoAwesome.PoC.csproj" />
   </ItemGroup>
 
 </Project>
